libfm-qt-1.3.0 / 2023-04-15
============================
 * Fixed the thumbnail/icon rectangle in list views.
 * Allowed typing of text tab with inline renaming.
 * Open non-executable files that have executable file type (like non-executable scripts with root executable flag).
 * Allowed disabling of smooth scrolling in all view modes.
 * File dialog: Add extension on saving only if it makes sense.
 * Go to name start/end with Home/End keys during inline renaming.
 * Keep selection and tree expansion in app chooser dialog when menu-cached reloads the apps tree.
 * Fixed pressing of ENTER in the file dialog, especially in the file-saving dialog.
 * Ensure `Escape` closes the popup of path-edit completer.
 * Treat zero-sized files based on their extensions.
 * Use "New file" as the default name for new files (especially after GLib 2.75.1).
 * Ensure toolbar background is shown behind path-bar.
 * Prevent long content search texts from widening search dialog.

libfm-qt-1.2.1 / 2023-01-02
============================
 * Specified the parents of context menus for use on Wayland.
 * Fixed launching XWayland apps under Wayland.
 * appchooserdialog: do not disable the OK button when Custom Command page is shown.
 * Increased the minimum width of name column in detailed list view.
 * Fixed the DND menu position under Wayland.
 * Fixed crash with DND from outside app under Wayland.
 * Fixed unresponsive DND menu under Wayland.
 * Workaround for DND keyboard modifiers under Wayland.
 * Check mime data of clipboard for nullity (for Wayland).
 * Fixed drawing of selection rectangle under Wayland.

libfm-qt-1.2.0 / 2022-11-05
============================
 * Support adding of pattern lists to entries of search dialog (such lists are used by `pcmanfm-qt` for having a search history).
 * Fixed crash with empty URI scheme of folder path.
 * Silenced compilation warnings about deprecated GLib functions.
 * Don't show a deletion prompt without a selection.